Group & manage page specific css/js from three scopes: Application, Controller, Page * Application Wide 	(Defined in app/views/layouts/*) * Controller Wide 	(Loaded automatically by naming convention) * View Specific 	(Defined in individual view templates)
* Group Assets		(Group assets into _modules_ in a single config file)

- Initial Commit

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -80,7 +80,7 @@ tolerate extra periods in source asset names. fixed subversion revision checking
 ------------------------------------------------------------------------
 r26 | sbecker | 2006-06-24 17:04:27 -0400 (Sat, 24 Jun 2006) | 1 line
 
-convert asset_packages_yml var to a class var
+convert asset_manager_yml var to a class var
 ------------------------------------------------------------------------
 r25 | sbecker | 2006-06-24 12:37:47 -0400 (Sat, 24 Jun 2006) | 1 line
 
